fixed some basic bitch text
also added aether/lumine image on export and import

at least now the text doesn't looks like it has crash to the side of the screen

--- a/css/mix.css
+++ b/css/mix.css
@@ -1405,12 +1405,14 @@ width:fit-content
   background-color: var(--color1-back);
     color:var(--color1);
   width:100%;
-  padding-left:10px;
 }
 .title_middle h3{
   padding:0px 12px;
   width:fit-content;
-
+}
+.title_middle h2{
+  padding:0px 12px;
+  width:fit-content;
 }
 .title{
   width:100%;
